--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,29 +1,11 @@
-/*  
-Theme Name: Simple2
-Author: Tanky Woo<me@tankywoo.com>
-Author URI: http://www.wutianqi.com/
-Description: Default theme for simiki.
-Version: 0.1
-License: The MIT License (MIT)
-Tags: simple, single-columns, code, codehighlight, white, markdown
-*/
-
-/* Global Configuration */
-/* IE6 ignores this and uses default size of 16pt */
-html>body { font-size: 14px; }
-
-html {
-    font-size: 100%;
-    overflow-y: scroll;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
+body {
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue","Helvetica",PingFang SC,PingFang TC,Hiragino Sans GB,STHeiti,Microsoft YaHei,Microsoft JhengHei,"WenQuanYi Micro Hei",sans-serif;
+  font-size: 15px;
+  color: #555;
 }
 
-body {
-    font-family: "Helvetica Neue", "Segoe UI", Arial, Sans-Serif;
-    line-height: 1.5em;
-    background-color: whitesmoke;
-    color: #2f2f2f;
+.container {
+  padding: 16px 16px;
 }
 
 a { color: #0645ad; text-decoration: none; }
@@ -31,265 +13,175 @@ a:visited { color: #0645ad; }
 a:hover { color: #06e; }
 a:active { color: #06e; }
 
-p { margin: 0 0 1.5em 0; text-align: justify; }
-
 h1, h2, h3, h4, h5, h6 {
-    font-weight: normal;
-    line-height: 1em;
+  font-weight: normal;
+  margin: 0;
+  padding: 0;
 }
 
-h1 { font-size: 2.0em; }
-h2 { font-size: 1.6em; border-bottom: 1px solid #ddd; padding-bottom: 5px; overflow:hidden }
-h3 { font-size: 1.4em; }
-h4 { font-size: 1.2em; }
-h5 { font-size: 1.0em; }
-h6 { font-size: 0.8em; }
-
-blockquote {
-    color: #666;
-    margin: 0;
-    padding-left: 3em;
-    border-left: 0.4em #eee solid;
+.index h2 {
+  font-size: 22px;
+  margin: 20px 0 18px;
+  border: none;
 }
 
-hr {
-    border: 1px solid silver;
-    margin: 1em 0;
-    padding: 0;
+.index ul {
+  -webkit-padding-start: 20px;
+  margin: 0 0;
 }
 
-b, strong { font-weight: bold; }
-
-ul, ol {
-    margin: 1.5em 0;
-    padding-left: 1.5em;
-    line-height: 1.5em;
+.index ul li {
+  padding-bottom: 2px;
 }
 
-ul li { list-style-type: square; }
-
-ul li p { margin: 0; }
-
-img {
-    border: 0;
-    vertical-align: middle;
-    margin: 0 auto;
-    max-width: 100%;
+.title, .page_title {
+  font-size: 24px;
+  color: #333;
+  border-bottom: 1px solid #e8e8e8;
+  padding-bottom: 15px;
+  text-align: center;
 }
 
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    margin-bottom: 1em;
-    border: 1px solid #ccc;
+h1, h2 {
+  color: #333;
 }
 
-td {
-    vertical-align: top;
-    padding: 3px 6px;
+h1 {
+  margin: 20px 0 18px;
+  font-size: 24px;
 }
 
-/* Optimization for pre and code tag */
-pre, code { 
-    font-family: Consolas, "DejaVu Sans Mono", "Lucida Console", Monaco, Andale Mono, "MS Gothic", monospace;
-    font-size: 13px;
-    border-radius: 3px;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    overflow: auto;
+h2 {
+  font-size: 20px;
+  padding-bottom: 5px;
+  margin: 20px 0 15px;
+  border-bottom: 1px dashed #e8e8e8;
 }
 
-code {
-    color: #666;
-    background-color: #eee;
-    margin: 0 2px;
-    padding: 1px 3px;
+h3 {
+  margin: 15px 0 15px;
+  font-size: 20px;
 }
 
-pre { 
-    border: 1px solid #eee;
-    padding: 8px 12px;
-    white-space: pre;
-    white-space: -moz-pre-wrap; /* Firefox */
-    white-space: -pre-wrap;     /* ancient Opera */
-    white-space: -o-pre-wrap;   /* newer Opera */
-    white-space: pre-wrap;      /* Chrome; W3C standard */
-    word-wrap: break-word;      /* IE */
+h4 {
+  margin: 15px 0 15px;
+  font-size: 18px;
 }
 
-pre code {
-    border: 0px !important;
-    padding: 0;
-    color: #000;
-    background-color: #f8f8f8;
+h5, h6 {
+  margin: 15px 0 15px;
+  font-size: 16px;
+  font-weight: bold;
 }
 
-/* Custom Configuration */
-#container {
-    background: white;
-    width: 50em;
-    line-height: 1.5em;
-    margin: 1.5em auto 3em auto;
-    padding: 1.5em 2em;
-    border: 1px solid #ccc;
-    box-shadow: 2px 2px 8px #aaa;
-    -webkit-box-shadow: 2px 2px 8px #aaa;
-    -moz-box-shadow: 2px 2px 8px #aaa;
+footer {
+  padding: 0px 16px;
+  margin: 20px 0;
+  text-align: center;
+  font-size: 14px;
+  color: #787878;
+}
+
+#header {
+  padding-bottom: 15px;
+  font-size: 14px;
+  color: #787878;
 }
 
 #header .updated {
   float: right;
-  font-size: 80%;
-  color: #555;
 }
 
-.title, .page_title {
-    text-align: center;
-    font-size: 2em;
-    line-height: 1.5em;
-    padding-bottom: 10px;
-    margin: 20px 0;
+/* Optimization for pre and code tag */
+pre, code {
+  font-family: "Source code pro", Consolas, "DejaVu Sans Mono", "Lucida Console", Monaco, monospace;
+  border-radius: 2px;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  overflow: auto;
+  background-color: #f8f8f8;
 }
 
-.page_title {
-    border-bottom: 1px dashed #eee;
+code {
+  padding: 1px 2px;
 }
 
-#footer p {
-    margin: 10px auto;
-    font-size: 80%;
-    text-align: center;
-    color: #555;
-    line-height: 1em;
+blockquote {
+  padding: 0px 15px;
+  margin: 15px 0;
+  border-left: 2px solid rgba(40, 50, 60, 0.85);
+  overflow: auto;
+  word-wrap: break-word;
 }
 
-#footer a { color: #555; }
-#footer a:hover { color: black; }
-
-.post-nav a { color: #555; }
-.post-nav a:hover { color: black; }
-
-.category a { color: #555; }
-.category a:hover { color: black; }
-
-.category_pages ul {
-  padding-left: 0;
+blockquote p {
+  margin: 0 0 10px 0;
+  color: #8a8a8a;
 }
 
-li.pagelist {
-    width: 100%;
-    margin-right: 1.5em;
-    list-style-type: none;
-    overflow: hidden;
+blockquote p:last-child {
+  margin-bottom: 0;
 }
 
-.item_arrow:before {
-    content: "\0BB \020";
+img {
+  border: 0;
+  vertical-align: middle;
+  margin: 0 auto;
+  max-width: 100%;
 }
 
-.index ul { margin: 0; }
+pre {
+  padding: 8px;
+  margin: 16px 0;
+  background-color: #f8f8f8;
+  border-radius: 4px;
+  font-size: 90%;
+}
+
+code {
+  padding: 4px;
+  background-color: #f8f8f8;
+  border-radius: 4px;
+  font-size: 90%;
+  color: #333;
+}
 
 /* Table of Contents */
 .toc {
-    margin: 0 0.5em;
-    padding: 0.5em 1em;
-    border: 1px solid silver;
-    background-color: #ecf5ff;
-    float: right;
-    display: block;
-    font-size: 90%;
+  margin: 15px 0 0;
+  padding: 8px 8px;
+  border: 1px solid #e8e8e8;
+  background-color: #ecf5ff;
+  float: right;
+  display: block;
+  font-size: 14px;
+  border-radius: 3px;
 }
 
 .toc > .toctitle {
-    display: block;
-    text-align: center;
-    font-weight: bold;
-    margin-bottom: 1em;
+  display: block;
+  text-align: center;
+  margin-bottom: 8px;
 }
 
 .toc ul {
-    margin: 0;
+  -webkit-padding-start: 20px;
+  margin: 0 0;
+}
+
+ul, ol {
+  -webkit-padding-start: 20px;
 }
 
 /* Hackers */
 /* Hacker for codehilite */
-table.highlighttable {
-    border: 1px solid #eee;
-    border-collapse: separate !important;
-    border-radius: 3px;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-}
-
-.highlighttable td {
-    padding: 0;
-    border: none;
-}
-
-.highlighttable td.code {
-    width: 100%;
-}
-
-.highlighttable .linenodiv {
-    border-right: 1px solid #ccc;
-}
-
-.highlighttable .linenodiv pre {
-    margin: 0;
-    border: none;
-}
-
-.highlighttable .highlight pre {
-    margin: 0;
-    border: none;
-}
 
 /* Clear the float problem */
 .clearfix:after {
-    visibility: hidden;
-    clear: both;
-    font-size: 0;
-    content: ".";
-    display: block;
-    height: 0;
-}
-
-
-table.hlcodetable {
-    border: 1px solid #eee;
-    border-collapse: separate !important;
-    border-radius: 3px;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-}
-
-.hlcodetable td {
-    padding: 0;
-    border: none;
-}
-
-.hlcodetable td.code {
-    width: 100%;
-}
-
-.hlcodetable .linenodiv {
-    border-right: 1px solid #ccc;
-}
-
-.hlcodetable .linenodiv pre {
-    margin: 0;
-    border: none;
-}
-
-.hlcodetable .hlcode pre {
-    margin: 0;
-    border: none;
-}
-
-.list_wrapper {
-  display: inline-block;
-}
-
-.coll_name {
-  float: left;
+  visibility: hidden;
+  clear: both;
+  font-size: 0;
+  content: ".";
+  display: block;
+  height: 0;
 }
